fix: SonarLint를 반영하여 코드 리팩토링